# partclone-nbd

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  TODO
include/: crc.h  image.h  initialization.h  io.h  log.h  nbd.h  options.h  partclone.h  read_image.h  signals.h
src/: crc.c  image.c  initialization.c  log.c  main.c  nbd.c  read_image.c  signals.c
